hphp/test/slow/reified-generics/class-method-access.php.expectf
Fatal error: Generics type parameters are disallowed on dynamic method calls in %s on line 15
